Fix footer overlapping content

--- a/pollor.client/src/app/footer/footer.component.css
+++ b/pollor.client/src/app/footer/footer.component.css
@@ -2,6 +2,5 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  /* Set the fixed height of the footer here */
-  background-color: #f5f5f5;
+  height: 10rem;            /* Footer height, must be same or lower as in app.component.css */
 }
